@@ -22,5 +22,3 @@ module Webrat
     end
   end
 end
-
-Webrat.configuration.mode = :rack
