@@ -17,5 +17,3 @@ module Webrat
     
   end
 end
-
-Webrat.configuration.mode = :sinatra
