@@ -3,7 +3,7 @@ require File.expand_path(File.dirname(__FILE__) + "/../../spec_helper")
 describe Webrat::Configuration do
   predicate_matchers[:parse_with_nokogiri]  = :parse_with_nokogiri?
   predicate_matchers[:open_error_files]     = :open_error_files?
-  
+
   before do
     Webrat.cache_config_for_test
   end
@@ -40,5 +40,18 @@ describe Webrat::Configuration do
     
     config = Webrat.configuration
     config.should_not open_error_files
+  end
+  
+  [:rails, 
+   :selenium,
+   :rack,
+   :sinatra,
+   :merb,
+   :mechanize].each do |mode|
+    it "should require correct lib when in #{mode} mode" do
+      config = Webrat::Configuration.new
+      config.should_receive(:require).with("webrat/#{mode}")
+      config.mode = mode
+    end
   end
 end
