@@ -19,6 +19,7 @@
 
   * Maximize the browser window after initializing Selenium (Luke Melia)
   * Better inspect output for Webrat elements
+  * Sets the Webrat mode with Configuration#mode= in the config block [#85] (Mike Gaffney)
   * Detect if the document is XML or HTML using the Content-Type when in Rails mode
   * Expose #selenium method for direct access to Selenium client
   * Check nokogiri gem version before requiring nokogiri
